--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
     <head>
         <meta charset="utf-8">
         <title>Angular component</title>
@@ -8,8 +8,11 @@
     <body>
         <img src="images/node.png" alt="node logo" width="100" height="100">
         <h1>Ciao Mondo</h1>
+        
+        <core-component from-attribute="attribute"></core-component>
 
         <!-- scripts -->
+        <script type="text/javascript" src="vendor.js"></script>
         <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
