--- a/server/app/views/index.ejs
+++ b/server/app/views/index.ejs
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="app.css"/>
     </head>
     <body>
-        <img src="images/node.png" alt="node logo" width="100" height="100">
+        <img src="assets/img/node.png" alt="node logo" width="100" height="100">
         <h1>Ciao Mondo</h1>
         
         <core-component from-attribute="attribute"></core-component>
