--- a/client/app/core/component/component_1/core.html
+++ b/client/app/core/component/component_1/core.html
@@ -1,1 +1,4 @@
-<div>Name: {{customer.name}} Address: {{customer.address}}</div>
+<div class="c_CoreComponent">
+    <div>{{$ctrl.fromAttribute}}</div>
+    <div>{{$ctrl.fromController}}</div>
+ </div>
