--- a/client/app/core/component/component_1/core.html
+++ b/client/app/core/component/component_1/core.html
@@ -3,7 +3,7 @@
     
     <div class="">
         <div><b>Add name</b></div>
-        <input type="text" name="name" value="" ng-model="$ctrl.data.name">
+        <input type="text" name="name" value="" ng-model="$ctrl.data.name" on-enter="$ctrl.handleSave()">
     </div>
     
     <button type="button" name="button" ng-click="$ctrl.handleGet()">get</button>
@@ -12,7 +12,7 @@
     <h3>List Movie:</h3>
     <ul>
         <li ng-repeat="item in $ctrl.list track by item._id">
-            {{item.name}} <span ng-click="$ctrl.handleDelete(item)" style="cursor:pointer;">[x]</span>
+            {{item.name}} <span ng-click="$ctrl.handleDelete(item, $index)" style="cursor:pointer;">[x]</span>
         </li>
     </ul>
  </div>
