--- a/server/app/views/index.ejs
+++ b/server/app/views/index.ejs
@@ -7,10 +7,12 @@
         <link rel="stylesheet" href="app.css"/>
     </head>
     <body>
-        <img src="assets/img/node.png" alt="node logo" width="100" height="100">
-        <h1>Ciao Mondo</h1>
-        
-        <core-component from-attribute="attribute"></core-component>
+        <div class="container">
+            <img src="assets/img/node.png" alt="node logo" width="100" height="100">
+            <h1>Ciao Mondo</h1>
+            
+            <core-component from-attribute="attribute"></core-component>
+        </div>
 
         <!-- scripts -->
         <script type="text/javascript" src="vendor.js"></script>
