--- a/server/app/views/layout.html
+++ b/server/app/views/layout.html
@@ -7,12 +7,7 @@
         <link rel="stylesheet" href="app.css"/>
     </head>
     <body>
-        <div class="container">
-            <img src="assets/img/node.png" alt="node logo" width="100" height="100">
-            <h1>Ciao Mondo</h1>
-            
-            <core-component from-attribute="attribute"></core-component>
-        </div>
+        {% block content %}{% endblock %}
 
         <!-- scripts -->
         <script type="text/javascript" src="vendor.js"></script>
