--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -3,8 +3,19 @@
 {% block content %}
 <div class="container">
     <img src="assets/img/node.png" alt="node logo" width="100" height="100">
-    <h1>Ciao Mondo</h1>
+    <h1>Movie list</h1>
     
-    <core-component from-attribute="attribute"></core-component>
+    <div class="row">
+        <div class="col-xs-6">
+            <img src="#" alt=""/>
+        </div>
+        <div class="col-xs-18">
+            <h2>Teenage Mutant Ninja Turtles: Out of the Shadows (2016)</h2>
+
+            <p>
+                Description
+            </p>
+        </div>
+    </div>
 </div>
 {% endblock %}
