--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<div>
+<div class="container">
     <img src="assets/img/node.png" alt="node logo" width="100" height="100">
     <h1>Movie list</h1>
     
