--- a/server/app/views/profile.html
+++ b/server/app/views/profile.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <div class="container">
-    <img src="assets/img/node.png" alt="node logo" width="100" height="100">
+    <img src="/assets/img/node.png" alt="node logo" width="100" height="100">
     <h1>Ciao Mondo</h1>
     
-    <p>profile page</p>
+    <p>profile page {{slug}}</p>
 </div>
 {% endblock %}
