solved root path

--- a/server/app/views/layout.html
+++ b/server/app/views/layout.html
@@ -28,14 +28,14 @@
         <meta name="theme-color" content="#ffffff">
     
         {# style #}
-        <link rel="stylesheet" href="vendor.css"/>
-        <link rel="stylesheet" href="app.css"/>
+        <link rel="stylesheet" href="/vendor.css"/>
+        <link rel="stylesheet" href="/app.css"/>
     </head>
     <body>
         {% block content %}{% endblock %}
 
         {# script #}
-        <script type="text/javascript" src="vendor.js"></script>
-        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="/vendor.js"></script>
+        <script type="text/javascript" src="/app.js"></script>
     </body>
 </html>
