--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 <div class="container">
-    <img src="assets/img/node.png" alt="node logo" width="100" height="100">
+    <img src="/assets/img/node.png" alt="node logo" width="100" height="100">
     <h1>Movie list</h1>
     
     <div class="row">
         <div class="col-xs-12 col-sm-4">
-            <img src="#" alt=""/>
+            <!-- <img src="#" alt=""/> -->
         </div>
         <div class="col-xs-12 col-sm-8">
             <h2>Teenage Mutant Ninja Turtles: Out of the Shadows (2016)</h2>
