--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -3,6 +3,9 @@
 {% block content %}
 <div class="container">
     <img src="/assets/img/node.png" alt="node logo" width="100" height="100">
+
+    {% include "./partials/nav.html" %}
+
     <h1>Movie list</h1>
     
     <div class="row">
