--- a/server/app/views/profile.html
+++ b/server/app/views/profile.html
@@ -3,6 +3,9 @@
 {% block content %}
 <div class="container">
     <img src="/assets/img/node.png" alt="node logo" width="100" height="100">
+
+    {% include "./partials/nav.html" %}
+
     <h1>Ciao Mondo</h1>
     
     <p>profile page {{slug}}</p>
