fixed db bootstrap, global template method, readme

--- a/server/app/views/profile.html
+++ b/server/app/views/profile.html
@@ -6,8 +6,8 @@
 
     {% include "./partials/nav.html" %}
 
-    <h1>Ciao Mondo</h1>
-    
+    <h1>Teenage Mutant Ninja Turtles: Out of the Shadows (2016)</h1>
+
     <p>profile page {{slug}}</p>
 </div>
 {% endblock %}
