--- a/server/app/views/partials/nav.html
+++ b/server/app/views/partials/nav.html
@@ -1,4 +1,4 @@
 <ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="/">home</a></li>
-  <li role="presentation"><a href="/movie/tobi">movie tobi</a></li>
+  <li role="presentation" class="{% if routeMatch('/') %}active{% endif %}"><a href="/">home</a></li>
+  <li role="presentation" class="{% if routeMatch('/movie/tobi') %}active{% endif %}"><a href="/movie/tobi">movie tobi</a></li>
 </ul>
