--- a/client/app/core/style/base/base.css
+++ b/client/app/core/style/base/base.css
@@ -1,8 +1,4 @@
 body {
-    font-size: 14px;
-    font-family: Arial, sans-serif;
-}
-
-h1 {
-    font-size: 18px;
+    font-size:   var(--font-size-base);
+    font-family: var(--font-sarif);
 }
