--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -15,7 +15,7 @@
         <div class="col-xs-12 col-sm-8">
             <h2>Teenage Mutant Ninja Turtles: Out of the Shadows (2016)</h2>
 
-            <p>
+            <p class="tCor-FontSize">
                 Description
             </p>
         </div>
