--- a/client/app/core/style/trump/typo.css
+++ b/client/app/core/style/trump/typo.css
@@ -1,3 +1,19 @@
 .tCor-FontSize {
-    @mixin factoryGrid font-size 0 10 12 14;
+    @each $value, $i in 0, 10, 12, 14, 16, 18, 20, 24 {
+        &Xs$(i) {
+            font-size: $(value)px;
+        }
+        
+        @media (--screen-min-sm) {
+            &Sm$(i) {
+                font-size: $(value)px;
+            }
+        }
+        
+        @media (--screen-min-md) {
+            &Md$(i) {
+                font-size: $(value)px;
+            }
+        }
+    }
 }
