--- a/server/app/views/partials/nav.html
+++ b/server/app/views/partials/nav.html
@@ -1,4 +1,5 @@
+<img src="/assets/img/node.png" class=" tCor-MgBottomXs3" alt="node logo" width="80" height="80">
 <ul class="nav nav-pills">
-  <li role="presentation" class="{% if routeMatch('/') %}active{% endif %}"><a href="/">home</a></li>
-  <li role="presentation" class="{% if routeMatch('/movie/tobi') %}active{% endif %}"><a href="/movie/tobi">movie tobi</a></li>
+  <li role="presentation" class="{% if routeMatch('/') %}active{% endif %}"><a href="/">Home</a></li>
+  <li role="presentation" class="{% if routeMatch('/movie/tobi') %}active{% endif %}"><a href="/movie/tobi">Movie tobi</a></li>
 </ul>
