--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -6,9 +6,10 @@
 
     <h1>Movie list</h1>
     
-    <div class="row">
+    {% for item in [1,2,3,4] %}
+    <div class="row tCor-MgBottomXs4">
         <div class="col-xs-12 col-sm-4">
-            <!-- <img src="#" alt=""/> -->
+            <img src="https://i.ytimg.com/vi/3Z1mfY5qOAQ/maxresdefault.jpg" alt="turtle cover" class="tCor-FullWidth"/>
         </div>
         <div class="col-xs-12 col-sm-8">
             <h2>Teenage Mutant Ninja Turtles: Out of the Shadows (2016)</h2>
@@ -18,5 +19,6 @@
             </p>
         </div>
     </div>
+    {% endfor %}
 </div>
 {% endblock %}
