--- a/server/app/views/profile.html
+++ b/server/app/views/profile.html
@@ -6,6 +6,15 @@
 
     <h1>Teenage Mutant Ninja Turtles: Out of the Shadows (2016)</h1>
 
-    <p>profile page {{slug}}</p>
+    <div class="row tCor-MgBottomXs4">
+        <div class="col-xs-12 col-sm-4">
+            <img src="https://i.ytimg.com/vi/3Z1mfY5qOAQ/maxresdefault.jpg" alt="turtle cover" class="tCor-FullWidth"/>
+        </div>
+        <div class="col-xs-12 col-sm-8">
+            <p class="tCor-FontSize">
+                Description
+            </p>
+        </div>
+    </div>
 </div>
 {% endblock %}
