--- a/client/app/core/style/base/base.css
+++ b/client/app/core/style/base/base.css
@@ -1,4 +1,16 @@
 body {
     font-size:   var(--font-size-base);
-    font-family: var(--font-sarif);
+    font-family: var(--font-sans-sarif);
+}
+
+h1,h2,h3,h4,h5,h6 {
+    margin: 0 0 15px 0;
+}
+
+/* reset element classes */
+.bCor-h1e6Reset {
+    font-size: var(--font-size-base);
+    margin:0;
+    line-height: 1;
+    font-weight: normal;
 }
