--- a/client/app/core/style/component/text.css
+++ b/client/app/core/style/component/text.css
@@ -1,11 +1,24 @@
 .cCor-TextHeader {
-    font-size: 
+    font-size:   var(--font-huge);
+    font-family: var(--font-sans-sarif);
 }
 
-.cCor-TextSubHeader {}
+.cCor-TextSubHeader {
+    font-size:   var(--font-big);
+    font-family: var(--font-sans-sarif);
+}
 
-.cCor-TextSummary {}
+.cCor-TextSummary {
+    font-size: var(--font-size-base);
+    font-family: var(--font-sarif);
+}
 
-.cCor-TextDescription {}
+.cCor-TextDescription {
+    font-size: var(--font-huge);
+    font-family: var(--font-sarif);
+}
 
-.cCor-TextLabel {}
+.cCor-TextLabel {
+    font-size: var(--font-small);
+    font-family: var(--font-sarif);
+}
