--- a/server/app/views/layout.html
+++ b/server/app/views/layout.html
@@ -33,6 +33,10 @@
     </head>
     <body>
         {% block content %}{% endblock %}
+        
+        {% block footer %}
+            {% include "./partials/footer.html" %}
+        {% endblock %}
 
         {# script #}
         <script type="text/javascript" src="/vendor.js"></script>
