--- a/client/app/core/style/trump/layout.css
+++ b/client/app/core/style/trump/layout.css
@@ -1,3 +1,5 @@
 .tCor-FullWidth { width: 100% !important; }
 
+.tCor-Block { display: block; }
+
 .tCor-BgGrayLight { background-color: var(--color-gray-light); }
