--- a/client/app/core/style/base/base.css
+++ b/client/app/core/style/base/base.css
@@ -14,3 +14,12 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1;
     font-weight: normal;
 }
+
+.bCor-AncReset {
+    color: var(--color-colorbase);
+
+    &:hover {
+        color: var(--color-colorbase);
+        text-decoration: none;
+    }
+}
