--- a/client/app/core/style/setting/theme.css
+++ b/client/app/core/style/setting/theme.css
@@ -1,6 +1,6 @@
 :root {
     /* font family */
-    --font-sarif: Times New Roman, sarif;
+    --font-sarif: 'Merriweather', serif;
     --font-sans-sarif: Arial, sans-serif;
     
     /* font size */
@@ -14,7 +14,10 @@
     --color-colorbase:  black;
     --color-bgbase:     white;
 
-    --color-primary:    #428bca;
+    --color-primary:      #3E863D;
+    --color-primary-dark: #2f692f;
+    --color-primary-light: #4ba349;
+    
     --color-success:    #5cb85c;
     --color-warning:    #f0ad4e;
     --color-danger:     #d9534f;
@@ -22,6 +25,13 @@
     --color-gray-dark:  #666;
     --color-gray:       #ccc;
     --color-gray-light: #e9e9e9;
+
+    /* line height */
+    --line-height-big:    1.4;
+    --line-height-medium: 1.2;
+    --line-height-base:   1;
+    --line-height-half:   .5;
+    
 
     /* media query */
     @custom-media --screen-min-xs (min-width: 0px);
