--- a/server/app/views/movie_list.html
+++ b/server/app/views/movie_list.html
@@ -9,7 +9,7 @@
     <h1 class="bCor-h1e6Reset cCor-TextHeader tCor-MgBottomXs4">Movie list</h1>
 
     {% for item in [1,2,3,4] %}
-    <a href="/movies/teenage-mutant-ninja-turtles:-out-of-the-shadows-(2016)">
+    <a href="/movies/teenage-mutant-ninja-turtles:-out-of-the-shadows-(2016)" class="bCor-AncReset">
         <div class="row tCor-MgBottomXs4">
             <div class="col-xs-12 col-sm-4">
                 <img src="https://i.ytimg.com/vi/3Z1mfY5qOAQ/maxresdefault.jpg" alt="turtle cover" class="tCor-FullWidth"/>
