added some style

--- a/server/app/views/layout.html
+++ b/server/app/views/layout.html
@@ -35,6 +35,7 @@
     <body>
         <div class="cCor-Header">
             <div class="container">
+                <a href="/"><img src="/assets/img/node.png" class="cCor-Logo tCor-MgBottomXs3" alt="node logo" width="80" height="80"></a>
                 {% include "./partials/nav.html" %}
             </div>
         </div>
