--- a/server/app/views/partials/nav.html
+++ b/server/app/views/partials/nav.html
@@ -1,5 +1,4 @@
-<img src="/assets/img/node.png" class=" tCor-MgBottomXs3" alt="node logo" width="80" height="80">
 <ul class="nav nav-pills">
-  <li role="presentation" class="{% if routeMatch('/') %}active{% endif %}"><a href="/">Home</a></li>
+  <li role="presentation" class="{% if routeMatch('/') %}active{% endif %} tCor-MgRightXs3"><a href="/">Home</a></li>
   <li role="presentation" class="{% if routeMatch('/movies/') %}active{% endif %}"><a href="/movies/">Movies</a></li>
 </ul>
