--- a/server/app/views/profile.html
+++ b/server/app/views/profile.html
@@ -2,9 +2,7 @@
 
 {% block content %}
 <div class="container">
-    {% include "./partials/nav.html" %}
-
-    <h1>Teenage Mutant Ninja Turtles: Out of the Shadows (2016)</h1>
+    <h1 class="bCor-h1e6Reset cCor-TextHeader tCor-MgBottomXs3">Teenage Mutant Ninja Turtles: Out of the Shadows (2016)</h1>
 
     <div class="row tCor-MgBottomXs4">
         <div class="col-xs-12 col-sm-4">
