--- a/client/app/core/style/trump/typo.css
+++ b/client/app/core/style/trump/typo.css
@@ -20,34 +20,4 @@
     }
 }
 
-.tCor-Pd {
-    @each $value, $i in 0, 2, 5, 10, 15, 30, 45, 60 {
-        @if $value != 'disable' {
-            @mixin grid-spacing padding, $(value), $(i);
-            
-            @media (--screen-min-sm) {
-                @mixin grid-spacing padding, $(value), $(i);
-            }
-            
-            @media (--screen-min-md) {
-                @mixin grid-spacing padding, $(value), $(i);
-            }
-        }
-    }
-}
-
-.tCor-Mg {
-    @each $value, $i in 0, 2, 5, 10, 15, 30, 45, 60 {
-        @if $value != 'disable' {
-            @mixin grid-spacing margin, $(value), $(i);
-            
-            @media (--screen-min-sm) {
-                @mixin grid-spacing margin, $(value), $(i);
-            }
-            
-            @media (--screen-min-md) {
-                @mixin grid-spacing margin, $(value), $(i);
-            }
-        }
-    }
-}
+.tCor-BgGrayLight { background-color: var(--color-gray-light); }
