--- a/client/app/core/style/tool/tool.css
+++ b/client/app/core/style/tool/tool.css
@@ -1,9 +1,12 @@
-@define-mixin grid-spacing $property, $value, $index {
-    &Xs$(index)          { $(property):        $(value)px; }
-    &HlXs$(index)        { $(property)-top:    $(value)px; $(property)-bottom: $(value)px; }
-    &VlXs$(index)        { $(property)-right:  $(value)px; $(property)-left: $(value)px; }
-    &TopXs$(index)       { $(property)-top:    $(value)px; }
-    &RightXs$(index)     { $(property)-right:  $(value)px; }
-    &BottomXs$(index)    { $(property)-bottom: $(value)px; }
-    &LeftXs$(index)      { $(property)-left:   $(value)px; }
+/*
+    <div class="nSpa-PropXs0"></div>
+ */
+@define-mixin grid-spacing $property, $value, $index, $media {
+    &$(media)$(index)          { $(property):        $(value)px; }
+    &Vl$(media)$(index)        { $(property)-top:    $(value)px; $(property)-bottom: $(value)px; }
+    &Hl$(media)$(index)        { $(property)-right:  $(value)px; $(property)-left: $(value)px; }
+    &Top$(media)$(index)       { $(property)-top:    $(value)px; }
+    &Right$(media)$(index)     { $(property)-right:  $(value)px; }
+    &Bottom$(media)$(index)    { $(property)-bottom: $(value)px; }
+    &Left$(media)$(index)      { $(property)-left:   $(value)px; }
 }
