--- a/client/app/core/style/trump/typo.css
+++ b/client/app/core/style/trump/typo.css
@@ -4,13 +4,19 @@
             &Xs$(i) {
                 font-size: $(value)px;
             }
-            
+        }
+    }
+    @each $value, $i in 0, 10, 12, 14, 16, 18, 20, 24 {
+        @if $value != 'disable' {
             @media (--screen-min-sm) {
                 &Sm$(i) {
                     font-size: $(value)px;
                 }
             }
-            
+        }
+    }
+    @each $value, $i in 0, 10, 12, 14, 16, 18, 20, 24 {
+        @if $value != 'disable' {            
             @media (--screen-min-md) {
                 &Md$(i) {
                     font-size: $(value)px;
