--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -40,7 +40,7 @@
             {% endfor %}
         
             <div class="text-center">
-                <a href="/movies/" class="btn btn-primary">View More</a>
+                <a href="/movies/" class="btn btn-primary tCor-PdHlXs6">View More</a>
             </div>
         </aside>
     </div>
