--- a/server/app/views/movie_list.html
+++ b/server/app/views/movie_list.html
@@ -9,20 +9,24 @@
     {Filters}
 
     {% for item in [1,2,3,4] %}
-    <a href="/movies/teenage-mutant-ninja-turtles:-out-of-the-shadows-(2016)" class="bCor-AncReset">
-        <div class="row tCor-MgBottomXs4">
-            <div class="col-xs-12 col-sm-4 tCor-MgBottomXs3 tCor-MgBottomSm0">
-                <img src="https://i.ytimg.com/vi/3Z1mfY5qOAQ/maxresdefault.jpg" alt="turtle cover" class="tCor-FullWidth"/>
-            </div>
-            <div class="col-xs-12 col-sm-8">
-                <h2 class="bCor-h1e6Reset cCor-TextSubHeader tCor-MgBottomXs3">Teenage Mutant Ninja Turtles: Out of the Shadows (2016)</h2>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <a href="/movies/teenage-mutant-ninja-turtles:-out-of-the-shadows-(2016)" class="bCor-AncReset">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-4 tCor-MgBottomXs3 tCor-MgBottomSm0">
+                        <img src="https://i.ytimg.com/vi/3Z1mfY5qOAQ/maxresdefault.jpg" alt="turtle cover" class="tCor-FullWidth"/>
+                    </div>
+                    <div class="col-xs-12 col-sm-8">
+                        <h2 class="bCor-h1e6Reset cCor-TextSubHeader tCor-MgBottomXs3">Teenage Mutant Ninja Turtles: Out of the Shadows (2016)</h2>
 
-                <p class="tCor-FontSize">
-                    Description
-                </p>
-            </div>
+                        <p class="tCor-FontSize">
+                            Phasellus id ex ac sem eleifend ullamcorper. Vivamus cursus orci lectus. Morbi nisl diam, efficitur et lorem a, pellentesque pharetra tellus. 
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
-    </a>
+    </div>
     {% endfor %}
 
     <div class="text-center">
