--- a/server/app/views/movie_list.html
+++ b/server/app/views/movie_list.html
@@ -2,12 +2,27 @@
 
 {% block content %}
 <div class="container">
-    <h1 class="bCor-h1e6Reset cCor-TextHeader tCor-MgBottomXs4">Movie list</h1>
-
-    {Search input}<br><br>
+    <h1 class="bCor-h1e6Reset cCor-TextHeader tCor-MgBottomXs5 text-center">Movie list</h1>
+    
+    <div class="row">
+        <div class="col-xs-offset-3 col-xs-6">
+            <div class="input-group input-group-lg">
+                <input type="text" class="form-control" placeholder="Search moovies">
+                <span class="input-group-addon cCor-CursorPointer"><i class="icon icon-search"></i></span>
+            </div>
+        </div>
+    </div>
+    
 
     {Filters}
+    
 
+    <!-- loading -->
+    <div class="panel panel-default">
+        <div class="panel-body text-center">
+            <i class="icon icon-spin animate-spin tCor-FsXs7"></i>
+        </div>
+    </div>
     {% for item in [1,2,3,4] %}
     <div class="panel panel-default">
         <div class="panel-body">
