--- a/server/app/views/movie_list.html
+++ b/server/app/views/movie_list.html
@@ -34,7 +34,7 @@
                     <div class="col-xs-12 col-sm-8">
                         <h2 class="bCor-h1e6Reset cCor-TextSubHeader tCor-MgBottomXs3">Teenage Mutant Ninja Turtles: Out of the Shadows (2016)</h2>
 
-                        <p class="tCor-FontSize">
+                        <p class="bCor-parReset tCor-FontSize">
                             Phasellus id ex ac sem eleifend ullamcorper. Vivamus cursus orci lectus. Morbi nisl diam, efficitur et lorem a, pellentesque pharetra tellus. 
                         </p>
                     </div>
