--- a/client/app/core/style/base/base.css
+++ b/client/app/core/style/base/base.css
@@ -23,3 +23,8 @@ h1, h2, h3, h4, h5, h6 {
         text-decoration: none;
     }
 }
+
+.bCor-parReset {
+    font-size: var(--font-size-base);
+    margin: 0;
+}
