--- a/client/app/core/style/base/base.css
+++ b/client/app/core/style/base/base.css
@@ -18,7 +18,8 @@ h1, h2, h3, h4, h5, h6 {
 .bCor-AncReset {
     color: var(--color-colorbase);
 
-    &:hover {
+    &:hover,
+    &:focus {
         color: var(--color-colorbase);
         text-decoration: none;
     }
