--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -30,7 +30,7 @@
             <h3 class="bCor-h1e6Reset cCor-TextHeader tCor-MgBottomXs4">Latest movies</h3>
 
             {% for item in movies %}
-            <a href="{{item.link}}" class="bCor-AncReset tCor-Block tCor-MgBottomXs5">
+            <a href="/movies/{{item.slug}}" class="bCor-AncReset tCor-Block tCor-MgBottomXs5">
                 <img src="{{item.cover.url}}" alt="{{item.cover.alt}}" class="tCor-MgBottomXs3 tCor-FullWidth"/>
                 <h2 class="bCor-h1e6Reset cCor-TextSubHeader tCor-MgBottomXs2">{{item.title}}</h2>
                 <p class="tCor-FontSize">{{item.description}}</p>
