--- a/server/app/views/movie_list.html
+++ b/server/app/views/movie_list.html
@@ -32,7 +32,8 @@
                     </div>
                     <div class="col-xs-12 col-sm-8">
                         <h2 class="bCor-h1e6Reset cCor-TextSubHeader tCor-MgBottomXs3">{{item.title}}</h2>
-                        <p class="bCor-parReset tCor-FontSize">{{item.description}}</p>
+                        <p class="tCor-FontSize">{{item.description}}</p>
+                        <p class="bCor-parReset tCor-FontSize">Rating: {{item.vote}}<i class="icon icon-star"></i></p>
                     </div>
                 </div>
             </a>
