--- a/server/app/views/spa/layout.html
+++ b/server/app/views/spa/layout.html
@@ -7,6 +7,7 @@
 
         <title>Angular component</title>
         <meta name="description" content="description">
+        <base href="/admin/">
         
         {# favicon #}
         <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
