dashboard temp layout

--- a/client/app-spa/core/style/trump/typo.css
+++ b/client/app-spa/core/style/trump/typo.css
@@ -27,3 +27,4 @@
 }
 
 .tCor-BgGrayLight { background-color: var(--color-gray-light); }
+.tCor-BgWhite     { background-color: var(--color-white); }
