--- a/client/app-spa/core/views/index.html
+++ b/client/app-spa/core/views/index.html
@@ -1,1 +1,16 @@
-<h1>spa is working</h1>
+<div class="oCor-Dashboard">
+    <div class="oCor-Dashboard_nav">
+        nav
+    </div>
+    
+    <div class="oCor-Dashboard_main">
+        <div class="oCor-Dashboard_sidebar">
+            sidebar
+        </div>
+        <div class="oCor-Dashboard_body">
+            <h1>spa is working</h1>
+            <p>some content</p>
+<p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p>
+        </div>
+    </div>
+</div>
