--- a/client/app-spa/core/style/setting/theme.css
+++ b/client/app-spa/core/style/setting/theme.css
@@ -25,6 +25,7 @@
     --color-gray-dark:  #666;
     --color-gray:       #ccc;
     --color-gray-light: #e9e9e9;
+    --color-white:      white;
 
     /* line height */
     --line-height-big:    1.4;
