--- a/client/app-spa/core/style/base/base.css
+++ b/client/app-spa/core/style/base/base.css
@@ -1,7 +1,13 @@
-    body {
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
+body {
     font-size: var(--font-size-base);
     font-family: var(--font-sans-sarif);
 }
+
 h1, h2, h3, h4, h5, h6 {
     margin: 0 0 15px 0;
 }
