--- a/client/app-spa/core/views/index.html
+++ b/client/app-spa/core/views/index.html
@@ -1,16 +1,59 @@
 <div class="oCor-Dashboard">
-    <div class="oCor-Dashboard_nav">
-        nav
-    </div>
-    
-    <div class="oCor-Dashboard_main">
-        <div class="oCor-Dashboard_sidebar">
-            sidebar
+    <div class="oCor-Dashboard_layout">
+        <div class="oCor-Dashboard_nav">
+            nav
         </div>
-        <div class="oCor-Dashboard_body">
-            <h1>spa is working</h1>
-            <p>some content</p>
-<p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p><p>some content</p>
+
+        <div class="oCor-Dashboard_main">
+            <div class="oCor-Dashboard_sidebar">
+                sidebar
+            </div>
+            <div class="oCor-Dashboard_body">
+                <h1>spa is working</h1>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+                <p>some content</p>
+            </div>
         </div>
     </div>
 </div>
