--- a/server/app/views/spa/layout.html
+++ b/server/app/views/spa/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app" class="tCor-BgGrayLight">
+<html ng-app="app" class="oCor-Dashboard_BodyFreeze tCor-BgGrayLight">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
