--- a/client/app-spa/core/style/trump/typo.css
+++ b/client/app-spa/core/style/trump/typo.css
@@ -26,5 +26,7 @@
     }
 }
 
+.tCor-TextCenter { text-align: center !important; }
+
 .tCor-BgGrayLight { background-color: var(--color-gray-light); }
 .tCor-BgWhite     { background-color: var(--color-white); }
