--- a/client/app-spa/core/views/index.html
+++ b/client/app-spa/core/views/index.html
@@ -1,14 +1,19 @@
 <div class="oCor-Dashboard">
     <div class="oCor-Dashboard_layout">
         <div class="oCor-Dashboard_nav">
-            nav
+            <div class="cCor-NavBar tCor-AlignCenter">
+                <img src="/assets/img/node.png" class="cCor-Logo" alt="node logo" width="30" height="30">
+            </div>
         </div>
-
         <div class="oCor-Dashboard_main">
             <div class="oCor-Dashboard_sidebar">
-                sidebar
+                <div class="cCor-SideNav">
+                    <a href="#">
+                        <i class=""></i>
+                    </a>
+                </div>
             </div>
-            <div class="oCor-Dashboard_body">
+            <div class="oCor-Dashboard_body tCor-PdTopXs4 tCor-PdHlXs5">
                 <h1>spa is working</h1>
                 <p>some content</p>
                 <p>some content</p>
